fixed youtube columns collapse issue

--- a/onboarding/src/app.css
+++ b/onboarding/src/app.css
@@ -151,7 +151,6 @@ body {
 
 /* left side, youtube search items */
 .youtubeBlock {
-  flex: 1;
   background-color: rgba(130, 124, 212, 0.212);
   width: 250px;
   height: 150px;
@@ -165,14 +164,14 @@ body {
 .youtubeBlock:hover {
   transform: scale(1.02);
 }
-
+/* left column */
 .scrollable {
   height: 600px;
   overflow-y: scroll;
+  min-width: 300px;
 }
 /* right side, youtube saved tutorials */
 .youtubeBlockSaved {
-  flex: right;
   background-color: rgba(130, 124, 212, 0.212);
   width: 250px;
   height: 150px;
@@ -183,14 +182,18 @@ body {
   padding: 10px;
   font-size: 15px;
 }
+
+/*both youtube columns*/
 .youtubeItems {
   display: flex;
   flex-direction: row;
+  width: 100%;
 }
-
+/*right column */
 .savedYouTube {
   overflow-y: scroll;
   height: 600px;
+  min-width: 300px;
 }
 .youtubeBlockSaved:hover {
   transform: scale(1.02);
@@ -199,13 +202,20 @@ body {
 .youtubeListHeaders {
   display: flex;
   flex-direction: row;
-  margin-bottom: 10px;
+  width: 100%;
+  margin-bottom: 15px;
 }
 .ytLeft {
   width: 50%;
 }
 .ytRight {
   width: 50%;
+}
+
+.placeholderText {
+  margin-left: 50px;
+  margin-right: 50px;
+  color: rgba(130, 124, 212, 0.589);
 }
 button {
   background-color: rgba(130, 124, 212, 0.212);
